# docs/swagger.yaml
@@ -10,6 +10,13 @@ definitions:
     required:
     - ip-address
     type: object
+  api_handler.CreateSqlInjectRequest:
+    properties:
+      rule:
+        type: string
+    required:
+    - rule
+    type: object
   api_handler.LoginRequest:
     properties:
       captcha:
@@ -46,6 +53,62 @@ definitions:
     type: object
   config.Config:
     properties:
+      rateLimiter:
+        description: 限速器配置
+        properties:
+          banCounter:
+            description: 计数器常规值，超过触发常规封禁时间
+            type: integer
+          banDuration:
+            description: 常规封禁时间，单位秒
+            type: integer
+          fixedWindow:
+            description: 固定窗口模式配置
+            properties:
+              maxRequest:
+                description: 窗口内最大请求数
+                type: integer
+              windowSize:
+                description: 窗口大小,单位秒
+                type: integer
+            type: object
+          leakyBucket:
+            description: 漏桶模式配置
+            properties:
+              capacity:
+                description: 桶容量
+                type: integer
+              leakyPerSecond:
+                description: 漏水速度，单位秒
+                type: integer
+            type: object
+          maxCounter:
+            description: 计数器最大值，超过该值拉入永久IP黑名单
+            type: integer
+          mode:
+            description: 限速算法，1:令牌桶2:漏桶3:固定窗口4:滑动窗口
+            type: integer
+          slideWindow:
+            description: 滑动窗口模式配置
+            properties:
+              maxRequest:
+                description: 窗口内最大队列数
+                type: integer
+              windowSize:
+                description: 窗口大小，单位秒
+                type: integer
+            type: object
+          tokenBucket:
+            description: 令牌桶模式配置
+            properties:
+              maxToken:
+                description: 最大令牌数
+                type: integer
+              tokenPerSecond:
+                description: 令牌生成速度，单位秒
+                type: integer
+            type: object
+        type: object
       secret:
         properties:
           jwtSecretKey:
@@ -105,6 +168,32 @@ paths:
       summary: 获取图片验证码
       tags:
       - Auth
+  /waf/api/v1/blockLog:
+    get:
+      description: 分页查询拦截日志
+      parameters:
+      - description: 查询IP
+        in: query
+        name: keywords
+        type: string
+      - description: 页码
+        in: query
+        name: page
+        type: integer
+      - description: 页面大小
+        in: query
+        name: perPage
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api_handler.Response'
+      summary: 分页查询拦截日志
+      tags:
+      - BlockLog
   /waf/api/v1/config:
     get:
       description: 获取配置信息
@@ -248,4 +337,92 @@ paths:
       summary: 查询指定天数和小时数的日志记录
       tags:
       - Log
+  /waf/api/v1/sqlInject:
+    get:
+      description: 分页查询SQL注入规则
+      parameters:
+      - description: 关键词
+        in: query
+        name: keywords
+        type: string
+      - description: 页码
+        in: query
+        name: page
+        type: integer
+      - description: 页面大小
+        in: query
+        name: perPage
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api_handler.Response'
+      summary: 分页查询SQL注入规则
+      tags:
+      - SQlInject
+    post:
+      consumes:
+      - application/json
+      description: 新增sql注入规则
+      parameters:
+      - description: 请求体
+        in: body
+        name: api_handler.CreateSqlInjectRequest
+        required: true
+        schema:
+          $ref: '#/definitions/api_handler.CreateSqlInjectRequest'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api_handler.Response'
+      summary: 新增sql注入规则
+      tags:
+      - SQlInject
+  /waf/api/v1/sqlInject/{id}:
+    delete:
+      description: 删除sql注入规则
+      parameters:
+      - description: 主键ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api_handler.Response'
+      summary: 删除sql注入规则
+      tags:
+      - SQlInject
+    patch:
+      description: 编辑sql注入规则
+      parameters:
+      - description: 主键ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: 请求体
+        in: body
+        name: api_handler.CreateSqlInjectRequest
+        required: true
+        schema:
+          $ref: '#/definitions/api_handler.CreateSqlInjectRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api_handler.Response'
+      summary: 编辑sql注入规则
+      tags:
+      - SQlInject
 swagger: "2.0"
